name:                beam
version:             0.4.0.0
synopsis:            A type-safe SQL mapper for Haskell that doesn't use Template Haskell
description:         See the documentation on <http://travis.athougies.net/tags/beam.html my blog> and on <https://github.com/tathougies/beam/tree/master/Doc GitHub>.
homepage:            http://travis.athougies.net/projects/beam.html
license:             MIT
license-file:        LICENSE
author:              Travis Athougies
maintainer:          travis@athougies.net
-- copyright:
category:            Database
build-type:          Simple
extra-source-files:  README.md CHANGELOG.md
cabal-version:       >=1.18
bug-reports:         https://github.com/tathougies/beam/issues
stability:           Moderately Stable


library
  exposed-modules:     Database.Beam Database.Beam.Backend
                       Database.Beam.SQL Database.Beam.Query
                       Database.Beam.Schema Database.Beam.Backend.Sqlite3
                       Database.Beam.Internal Database.Beam.Query.Internal
  other-modules:       Database.Beam.SQL.Types

                       Database.Beam.Query.Types
                       Database.Beam.Query.Combinators

                       Database.Beam.Schema.Lenses
                       Database.Beam.Schema.Tables
                       Database.Beam.Schema.Fields
  build-depends:       base         >=4.7  && <4.10
                     , semigroups   >=0.13 && <0.19
                     , mtl          >=2.2  && <2.3
                     , containers   >=0.5  && <0.6
                     , text         >=1.2  && <1.3
                     , time         >=1.5  && <1.7
                     , microlens    >=0.1  && <0.5
                     , conduit      >=1.2  && <1.3
                     , uniplate     >=1.6
                     , tagged       >=0.7  && <0.9
                     , convertible  >=1.1
                     , pretty       >=1.1  && <1.2
                     , HDBC         >=2.4
                     , HDBC-sqlite3 >=2.3.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  ScopedTypeVariables, OverloadedStrings, GADTs, RecursiveDo, FlexibleInstances, FlexibleContexts, TypeFamilies,
                       GeneralizedNewtypeDeriving, RankNTypes, TupleSections, ConstraintKinds, StandaloneDeriving, TypeOperators,
                       DefaultSignatures, KindSignatures, MultiParamTypeClasses, DeriveGeneric, DeriveFunctor, DeriveDataTypeable

executable beam-example
  main-is:             Employees.hs
  other-modules:       EmployeesData
  build-depends:       base         >=4.7  && <4.10
                     , beam
                     , mtl          >=2.2  && <2.3
                     , text         >=1.2  && <1.3
                     , time         >=1.5  && <1.7
                     , microlens    >=0.1  && <0.5
  hs-source-dirs:      example
  default-language:    Haskell2010
  default-extensions:  ScopedTypeVariables, OverloadedStrings, GADTs, RecursiveDo, FlexibleInstances, FlexibleContexts, TypeFamilies,
                       GeneralizedNewtypeDeriving, RankNTypes, TupleSections, ConstraintKinds, StandaloneDeriving, TypeOperators,
                       DefaultSignatures, KindSignatures, MultiParamTypeClasses, DeriveGeneric, DeriveFunctor, DeriveDataTypeable

source-repository head
  type: git
  location: https://github.com/tathougies/beam.git
