[tool.poetry]
name = "beam-docs"
version = "0"
description = "MkDocs project for Beam"
authors = []

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "1.2.3" # later versions fail to build in poetry2nix derivation
sqlparse = "^0.4.2"
PyYAML = "^5.4.1"
mkdocs-material = "5.0.2" # later versions cause infinite recursion in poetry2nix
