cabal-version:      3.0
name:               beam-duckdb
version:            0.1.0.0
synopsis:           DuckDB backend for Beam
-- description:
license:            MIT
license-file:       LICENSE
author:             Laurent P. René de Cotret
maintainer:         laurent.decotret@outlook.com
-- copyright:
category:           Database
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files: tests/data/gen_parquet.py
                    tests/data/test1.parquet
                    tests/data/test2.parquet
                    tests/data/lineitem_iceberg/data/00000-411-0792dcfe-4e25-4ca3-8ada-175286069a47-00001.parquet
                    tests/data/lineitem_iceberg/data/00041-414-f3c73457-bbd6-4b92-9c15-17b241171b16-00001.parquet
                    tests/data/lineitem_iceberg/metadata/10eaca8a-1e1c-421e-ad6d-b232e5ee23d3-m0.avro
                    tests/data/lineitem_iceberg/metadata/10eaca8a-1e1c-421e-ad6d-b232e5ee23d3-m1.avro
                    tests/data/lineitem_iceberg/metadata/cf3d0be5-cf70-453d-ad8f-48fdc412e608-m0.avro
                    tests/data/lineitem_iceberg/metadata/snap-3776207205136740581-1-cf3d0be5-cf70-453d-ad8f-48fdc412e608.avro
                    tests/data/lineitem_iceberg/metadata/snap-7635660646343998149-1-10eaca8a-1e1c-421e-ad6d-b232e5ee23d3.avro
                    tests/data/lineitem_iceberg/metadata/v1.metadata.json
                    tests/data/lineitem_iceberg/metadata/v2.metadata.json
                    tests/data/lineitem_iceberg/metadata/version-hint.text

common common
    default-language: GHC2021
    ghc-options: -Wall
                 -Wcompat
                 -Widentities
                 -Wincomplete-uni-patterns
                 -Wincomplete-record-updates
                 -Wredundant-constraints
                 -fhide-source-paths
                 -Wpartial-fields
library
    import:           common
    exposed-modules:  Database.Beam.DuckDB
    other-modules:    Database.Beam.DuckDB.Backend
                      Database.Beam.DuckDB.Syntax
                      Database.Beam.DuckDB.Syntax.Builder
                      Database.Beam.DuckDB.Syntax.Extensions
                      Database.Beam.DuckDB.Syntax.Extensions.Iceberg
                      Database.Beam.DuckDB.Syntax.Extensions.Parquet
    build-depends:    base >=4.11 && <5
                    , beam-core
                    , beam-migrate
                    , bytestring
                    , duckdb-simple
                    , dlist
                    , free
                    , text
                    , time
                    , transformers
                    , uuid
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite beam-duckdb-test
    import:           common
    default-language: Haskell2010
    other-modules:    Database.Beam.DuckDB.Test.Extensions
                      Database.Beam.DuckDB.Test.Query
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          Main.hs
    build-depends:    base >=4.11 && <5
                    , beam-core
                    , beam-duckdb
                    , duckdb-simple
                    , hedgehog
                    , tasty
                    , tasty-hedgehog
                    , tasty-hunit
                    , text
                    , time
