cabal-version:      3.0
name:               beam-duckdb
version:            0.1.0.0
synopsis:           DuckDB backend for Beam
description:        Beam driver for DuckDB, an analytics-focused open-source in-process database.
license:            MIT
license-file:       LICENSE
author:             Laurent P. René de Cotret
maintainer:         laurent.decotret@outlook.com
copyright:          (c) Laurent P. René de Cotret
category:           Database
build-type:         Simple
extra-doc-files:    README.md
                    CHANGELOG.md
extra-source-files: tests/data/*.py
                    tests/data/*.parquet
                    tests/data/*.csv
                    tests/data/lineitem_iceberg/data/*.parquet
                    tests/data/lineitem_iceberg/metadata/*.avro
                    tests/data/lineitem_iceberg/metadata/*.json
                    tests/data/lineitem_iceberg/metadata/version-hint.text

common common
    default-language: Haskell2010
    ghc-options: -Wall
                 -Wcompat
                 -Widentities
                 -Wincomplete-uni-patterns
                 -Wincomplete-record-updates
                 -Wredundant-constraints
                 -fhide-source-paths
                 -Wpartial-fields
library
    import:           common
    exposed-modules:  Database.Beam.DuckDB
    other-modules:    Database.Beam.DuckDB.Backend
                      Database.Beam.DuckDB.Syntax
                      Database.Beam.DuckDB.Syntax.Builder
                      Database.Beam.DuckDB.Syntax.Extensions.DataSource
    build-depends:    base >=4.11 && <5
                    , beam-core ^>=0.10
                    , beam-migrate ^>=0.5
                    , bytestring >=0.10 && <0.13
                    , duckdb-simple ^>=0.1
                    , dlist >=0.8 && <1.1
                    , free >=4.12 && <5.3
                    , text >=1.0 && <2.2
                    , time >=1.6 && <1.16
                    , transformers >=0.3 && <0.7
                    , uuid-types ^>=1.0
    hs-source-dirs:   src

test-suite beam-duckdb-test
    import:           common
    other-modules:    Database.Beam.DuckDB.Test.Extensions
                      Database.Beam.DuckDB.Test.Query
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          Main.hs
    build-depends:    base >=4.11 && <5
                    , beam-core
                    , beam-duckdb
                    , duckdb-simple
                    , hedgehog
                    , tasty
                    , tasty-hedgehog
                    , tasty-hunit
                    , text
                    , time
