name:                beam-migrate
version:             0.5.0.0
synopsis:            SQL DDL support and migrations support library for Beam
description:         This package provides type classes to allow backends to implement
                     SQL DDL support for beam. This allows you to use beam syntax to
                     write type-safe schema generation code.

                     The package also provides features to introspect beam schemas,
                     and support for automatic generation of migrations in SQL and
                     Haskell formats.

                     This is mostly a low-level support library. Most often, this
                     library is used to write tooling to support DDL manipulation in
                     your project, or to enable migrations support in beam backends.

                     For a more turnkey solution for database migrations, consider
                     the <http://hackage.haskell.org/package/beam-migrate-cli beam-migrate>
                     command line tool. This provides out-of-the-box support for migrations,
                     schema change management, and version control, based on the features
                     provided in this library.

homepage:            https://travis.athougies.net/projects/beam.html
license:             MIT
license-file:        LICENSE
author:              Travis Athougies
maintainer:          travis@athougies.net
copyright:           Copyright (C) 2017-2018 Travis Athougies
category:            Database
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       1.18

library
  exposed-modules:     Database.Beam.Migrate

                       Database.Beam.Migrate.Types
                       Database.Beam.Migrate.Checks
                       Database.Beam.Migrate.Actions
                       Database.Beam.Migrate.Backend
                       Database.Beam.Migrate.Serialization

                       Database.Beam.Migrate.SQL
                       Database.Beam.Migrate.SQL.Builder
                       Database.Beam.Migrate.SQL.Tables
                       Database.Beam.Migrate.SQL.SQL92
                       Database.Beam.Migrate.SQL.BeamExtensions

                       Database.Beam.Migrate.Log

                       Database.Beam.Migrate.Generics

                       Database.Beam.Migrate.Simple

                       Database.Beam.Haskell.Syntax

  other-modules:       Database.Beam.Migrate.Generics.Types
                       Database.Beam.Migrate.Generics.Tables
                       Database.Beam.Migrate.SQL.Types
                       Database.Beam.Migrate.Types.CheckedEntities
                       Database.Beam.Migrate.Types.Predicates

  build-depends:       base                 ,
                       beam-core            ,
                       text                 ,
                       aeson                ,
                       bytestring           ,
                       free                 ,
                       time                 ,
                       mtl                  ,
                       scientific           ,
                       vector               ,
                       containers           ,
                       unordered-containers ,
                       hashable             ,
                       microlens            ,
                       parallel             ,
                       deepseq              ,
                       ghc-prim             ,
                       containers           ,
                       haskell-src-exts     ,
                       pretty               ,
                       dependent-map        ,
                       dependent-sum        ,
                       pqueue               ,
                       uuid-types
  default-language:    Haskell2010
  default-extensions:  KindSignatures, OverloadedStrings, TypeFamilies, FlexibleContexts,
                       StandaloneDeriving, GADTs, DeriveFunctor, RankNTypes, ScopedTypeVariables,
                       FlexibleInstances, TypeOperators, TypeApplications, MultiParamTypeClasses,
                       DataKinds, DeriveGeneric
  ghc-options:         -Wall
  if flag(werror)
    ghc-options:       -Werror

flag werror
  description: Enable -Werror during development
  default:     False
  manual:      True

source-repository head
  type: git
  location: https://github.com/tathougies/beam.git
  subdir: beam-migrate
