name:                beam-migrate
version:             0.5.3.0
synopsis:            SQL DDL support and migrations support library for Beam
description:         This package provides type classes to allow backends to implement
                     SQL DDL support for beam. This allows you to use beam syntax to
                     write type-safe schema generation code.

                     The package also provides features to introspect beam schemas,
                     and support for automatic generation of migrations in SQL and
                     Haskell formats.

                     This is mostly a low-level support library. Most often, this
                     library is used to write tooling to support DDL manipulation in
                     your project, or to enable migrations support in beam backends.

homepage:            https://travis.athougies.net/projects/beam.html
license:             MIT
license-file:        LICENSE
author:              Travis Athougies
maintainer:          travis@athougies.net
copyright:           Copyright (C) 2017-2018 Travis Athougies
category:            Database
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       1.18

library
  exposed-modules:     Database.Beam.Migrate

                       Database.Beam.Migrate.Types
                       Database.Beam.Migrate.Checks
                       Database.Beam.Migrate.Actions
                       Database.Beam.Migrate.Backend
                       Database.Beam.Migrate.Serialization

                       Database.Beam.Migrate.SQL
                       Database.Beam.Migrate.SQL.Builder
                       Database.Beam.Migrate.SQL.Tables
                       Database.Beam.Migrate.SQL.SQL92
                       Database.Beam.Migrate.SQL.BeamExtensions

                       Database.Beam.Migrate.Log

                       Database.Beam.Migrate.Generics

                       Database.Beam.Migrate.Simple

                       Database.Beam.Haskell.Syntax

  other-modules:       Database.Beam.Migrate.Generics.Types
                       Database.Beam.Migrate.Generics.Tables
                       Database.Beam.Migrate.SQL.Types
                       Database.Beam.Migrate.Types.CheckedEntities
                       Database.Beam.Migrate.Types.Predicates

  build-depends:       base                 >=4.9     && <5.0,
                       beam-core            >=0.10    && <0.11,
                       text                 >=1.2     && <2.2,
                       aeson                >=0.11    && <2.3,
                       bytestring           >=0.10    && <0.13,
                       free                 >=4.12    && <5.3,
                       time                 >=1.6     && <1.13,
                       mtl                  >=2.2     && <2.4,
                       scientific           >=0.3     && <0.4,
                       vector               >=0.11    && <0.14,
                       containers           >=0.5     && <0.8,
                       unordered-containers >=0.2     && <0.3,
                       hashable             >=1.2     && <1.5,
                       microlens            >=0.4     && <0.5,
                       parallel             >=3.2     && <3.3,
                       deepseq              >=1.4     && <1.7,
                       ghc-prim             >=0.5     && <0.12,
                       haskell-src-exts     >=1.18    && <1.24,
                       pretty               >=1.1     && <1.2,
                       dependent-map        >=0.2     && <0.5,
                       dependent-sum        >=0.4     && <0.8,
                       pqueue               >=1.3     && <1.6,
                       uuid-types           >=1.0     && <1.1
  default-language:    Haskell2010
  default-extensions:  KindSignatures, OverloadedStrings, TypeFamilies, FlexibleContexts,
                       StandaloneDeriving, GADTs, DeriveFunctor, RankNTypes, ScopedTypeVariables,
                       FlexibleInstances, TypeOperators, TypeApplications, MultiParamTypeClasses,
                       DataKinds, DeriveGeneric
  ghc-options:         -Wall
  if flag(werror)
    ghc-options:       -Werror

flag werror
  description: Enable -Werror during development
  default:     False
  manual:      True

source-repository head
  type: git
  location: https://github.com/haskell-beam/beam.git
  subdir: beam-migrate
