name:                 beam-postgres
version:              0.5.2.1
synopsis:             Connection layer between beam and postgres
description:          Beam driver for <https://www.postgresql.org/ PostgreSQL>, an advanced open-source RDBMS
homepage:             https://haskell-beam.github.io/beam/user-guide/backends/beam-postgres
license:              MIT
license-file:         LICENSE
author:               Travis Athougies
maintainer:           travis@athougies.net
category:             Database
build-type:           Simple
cabal-version:        1.18
extra-doc-files:      ChangeLog.md
bug-reports:          https://github.com/haskell-beam/beam/issues

library
  exposed-modules:    Database.Beam.Postgres
                      Database.Beam.Postgres.Migrate
                      Database.Beam.Postgres.Syntax
                      Database.Beam.Postgres.CustomTypes

                      Database.Beam.Postgres.Conduit
                      Database.Beam.Postgres.Full

                      Database.Beam.Postgres.PgCrypto
                      Database.Beam.Postgres.Extensions.UuidOssp

  other-modules:      Database.Beam.Postgres.Connection
                      Database.Beam.Postgres.Debug
                      Database.Beam.Postgres.Extensions
                      Database.Beam.Postgres.Extensions.Internal
                      Database.Beam.Postgres.PgSpecific
                      Database.Beam.Postgres.Types

  build-depends:      base                 >=4.9  && <5.0,
                      beam-core            >=0.9  && <0.10,
                      beam-migrate         >=0.5  && <0.6,

                      postgresql-libpq     >=0.8  && <0.10,
                      postgresql-simple    >=0.5  && <0.7,

                      text                 >=1.0  && <1.3,
                      bytestring           >=0.10 && <0.12,

                      attoparsec           >=0.13 && <0.15,
                      hashable             >=1.1  && <1.5,
                      lifted-base          >=0.2  && <0.3,
                      free                 >=4.12 && <5.2,
                      time                 >=1.6  && <1.12,
                      monad-control        >=1.0  && <1.1,
                      mtl                  >=2.1  && <2.3,
                      conduit              >=1.2  && <1.4,
                      aeson                >=0.11 && <2.1,
                      uuid-types           >=1.0  && <1.1,
                      case-insensitive     >=1.2  && <1.3,
                      scientific           >=0.3  && <0.4,
                      vector               >=0.11 && <0.13,
                      network-uri          >=2.6  && <2.7,
                      unordered-containers >= 0.2 && <0.3,
                      tagged               >=0.8  && <0.9,
                      transformers-base    >=0.4  && <0.5,

                      haskell-src-exts     >=1.18 && <1.24
  default-language:   Haskell2010
  default-extensions: ScopedTypeVariables, OverloadedStrings, MultiParamTypeClasses, RankNTypes, FlexibleInstances,
                      DeriveDataTypeable, DeriveGeneric, StandaloneDeriving, TypeFamilies, GADTs, OverloadedStrings,
                      CPP, TypeApplications, FlexibleContexts
  ghc-options:        -Wall
  if flag(werror)
    ghc-options: -Werror

test-suite beam-postgres-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules: Database.Beam.Postgres.Test,
                 Database.Beam.Postgres.Test.Marshal,
                 Database.Beam.Postgres.Test.Select,
                 Database.Beam.Postgres.Test.DataTypes,
                 Database.Beam.Postgres.Test.Migrate
  build-depends:
    aeson,
    base,
    beam-core,
    beam-migrate,
    beam-postgres,
    bytestring,
    hedgehog,
    postgresql-simple,
    tasty-hunit,
    tasty,
    text,
    tmp-postgres,
    uuid,
    vector
  default-language: Haskell2010
  default-extensions: OverloadedStrings, FlexibleInstances, FlexibleContexts, TypeFamilies,
                      ScopedTypeVariables, MultiParamTypeClasses, TypeApplications, DeriveGeneric,
                      DeriveAnyClass, RankNTypes

flag werror
  description: Enable -Werror during development
  default:     False
  manual:      True

source-repository head
  type: git
  location: https://github.com/haskell-beam/beam.git
  subdir: beam-postgres
